refactor: improve entity data structures with immutable collections, extracted locale logic, and comprehensive tests
Extract duplicated locale combination logic from predicate classes into
PredicateLocaleHelper. Make collections returned by entity data structures
immutable (toList(), Collectors.toUnmodifiableSet(), Collections.unmodifiable*).
Fix empty-set semantics in AssociatedDataValueSerializablePredicate.wasFetched()
and HashSet capacity initialization bug. Add getRequestedLocale() to predicates.
Expand wildcard imports, convert HTML tags to Markdown in JavaDoc, and add
comprehensive documentation to all predicate and data structure classes.
Add new test classes for AssociatedData, EntityAttributes, Prices,
ReferenceAttributes, References, and multiple predicate classes.

Ref: #8